# nitrokey-fido2-firmware

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile-fedora  MAINTAINERS.md  Makefile  Makefile.obsolete  README.md  SECURITY.md  STABLE_VERSION  callgraph.mk  code_check.mk  coverage.mk  docker_build.mk  in-docker-build.sh  loop_test.sh  sanitazers.mk  simulation_test.mk
ci-scripts/: pull.sh  release.sh
docs/solo/: nucleo32-board.md
fido2/: crypto.c  crypto.h  ctap.c  ctap.h  ctap_errors.h  ctap_parse.c  ctap_parse.h  ctaphid.c  ctaphid.h  data_migration.c  device.c  device.h  log.c  log.h  main.c  storage.h  stubs.c  u2f.c  u2f.h  version.h  version.h.in  version.mk
fido2/extensions/: extensions.c  extensions.h  solo.c  wallet.h
fido2/extensions/webcrypt/: README.md  ext_webcrypt.c  ext_webcrypt.h  wc_buffer.c  wc_buffer.h  wc_cbor.c  wc_cbor.h  wc_commands.c  wc_commands.h  wc_device.c  wc_device.h  wc_keys.c  wc_keys.h  wc_origin.c  wc_origin.h  wc_state.c  wc_state.h
keys/: attestation-certificate-development.der  attestation-certificate.der  bootloader-dev-public.txt  bootloader-dev.pem  dummy-key.hex  nk-dev-device_cert.der  nk-dev-device_key.hex  production_device_cert.der
keys/attestation/: device_cert.der  device_cert.pem  device_cert.txt
keys/attestation/dev/: device_cert.cdump  device_cert.der  device_cert.pem  device_cert.txt  device_key.hex  device_key.pem  device_key.txt  root_cert.pem  root_key.pem
metadata/: Nitrokey-FIDO2-CTAP2-Authenticator.json  Nitrokey-FIDO2-U2F-Authenticator.json
pc/: device.c  main.c
targets/stm32l432/: Makefile  application.mk  bootloader.mk
targets/stm32l432/bootloader/: bootloader.c  bootloader.h  main.c  main_small.c  pubkey_bootloader.c
targets/stm32l432/lib/usbd/: usbd_desc.c
targets/stm32l432/linker/: bootloader_stm32l4xx.ld  bootloader_stm32l4xx.ld-old  bootloader_stm32l4xx.ld.in  stm32l4xx.ld  stm32l4xx.ld.in
targets/stm32l432/src/: app-common.h  app.h  attestation.c  bsp.h  device-bootloader-update.c  device-bootloader-update.h  device-small.c  device.c  fifo.h  flash.c  flash.h  gpio.c  gpio.h  init.c  led.c  led.h  led_colors.h  main.c  memory_layout.h  nfc.c  rng.c  u2f_compat.h  user_feedback.c  user_feedback.h
tests/: ssh-fedora.dockerfile  ssh-tests.mk  ssh-ubuntu.dockerfile
tests/webcrypt-tests/: Makefile  Pipfile  README.md  conftest.py  test_comm.py
tests/webcrypt-tests/webcrypt/: communication.py  helpers.py  llog.py  types.py
tools/: conftest.py  ctap_test.py  helpers.py  logger.py  requirements.txt  test_fido2.py
udev/: 70-nitrokey-fido2-access.rules  70-nitrokey-fido2-legacy-access.rules  70-solokeys-access.rules  Makefile  README.md
